--- a/S01_Presentacion_Readme1st.ipynb
+++ b/S01_Presentacion_Readme1st.ipynb
@@ -140,42 +140,41 @@
    "source": [
     "|**Semana** | **Fecha**         |**Contenido** |**Observación**|\n",
     "|:-----:|:-------------:|:-----------|:----------------------|\n",
-    "|01|06/02|Presentación del curso. Aplicaciones a la Ingeniería Civil| |\n",
-    "|01|08/02|***Sistemas de ecuaciones I:*** lineales y cuadráticas| |\n",
-    "|02|13/02|***Sistemas de ecuaciones II:*** lineales y cuadráticas||\n",
-    "|02|15/02|***Trigonometría I:*** Funciones trigonométricas. Ley de seno y coseno. Identidades trigonométricas. Solución de triángulos||\n",
-    "|03|20/02|***Trigonometría II:*** Problemas de aplicación ||\n",
-    "|03|22/02|***Trigonometría III:*** Problemas de aplicación||\n",
-    "|04|27/02|***Introducción a la geometría Analítica Plana:*** Sistema coordenado.\tDistancia entre dos puntos (segmento de recta).\tRazón de división de un segmento.  Angulo de inclinación y pendiente de una recta.\tPosición relativa entre rectas. Ángulo entre dos rectas. Definición de vector para aplicaciones en el plano||\n",
-    "|04|29/02||***Quiz 1 (15%)*** Sistemas de ecuaciones y Trigonometría |\n",
-    "|05|05/03|***Introducción a la geometría plana:*** Ejercicios||\n",
-    "|05|07/03|***La línea la recta:*** Ecuación de la recta. Formas de la ecuación de la recta.\tDistancia punto – recta. Familia de rectas||\n",
-    "|06|12/03|***La línea recta:*** Problemas de aplicación||\n",
-    "|06|14/03|***La línea recta*** Problemas de aplicación - familia de rectas||\n",
-    "|07|19/03|***Introducción a la Geometría Vectorial 3D:*** El espacio cartesiano 3D y ubicación de puntos en el espacio: Distancia ente dos puntos 3D. Cosenos directores. Razón de división de un segmento. Definición vector. Componentes rectangulares de un vector en el espacio||\n",
-    "|07|21/03||***Quiz 2(20%)*** Introducción geometría 2D y Recta 2D|\n",
-    "|- |25-29/03||Semana Santa|\n",
-    "|08|02/04|***Introducción a la Geometría Vectorial 3D:*** Ejercicios||\n",
-    "|08|04/04|***Geometría Vectorial:*** Operaciones entre vectores. Normalización (Vector unitario). Producto por escalar. Producto escalar o producto interior. Producto vectorial. Triple producto escalar o triple producto mixto||\n",
-    "|09|09/04|***Geometría Vectorial:*** Suma de vectores por el método gráfico (triángulo y paralelogramo).\tEjercicios||\n",
-    "|09|11/04||***Quiz 3 (10%)*** Introducción a la Geometría Vectorial 3D|\n",
-    "|10|16/04|***Geometría Vectorial:*** Suma de vectores en el espacio 2D y 3D por descomposición. Ejercicios||\n",
-    "|10|18/04|***La recta en el espacio 3D*** Vector director. Forma paramétrica y simétrica.\tPosición relativa de rectas. Intersección de rectas. Angulo entre dos rectas||\n",
-    "|11|23/04|***La recta en el espacio 3D*** Ejercicios||\n",
-    "|11|25/04||***Quiz 4 (15%)*** Geometría Vectorial 3D: Operaciones entre vectores|\n",
-    "|12|30/04|***El plano en el espacio 3D:***\tEcuación general del plano.\tPosición relativa entre planos.\tAngulo entre dos planos. Distancia punto- plano. Trazas de un plano. Posición relativa recta – plano. Familia de planos. Punto de radiación. Ecuación general de la recta. Planos proyectantes de una recta||\n",
-    "|12|02/05|***El plano en el espacio 3D:*** Ejercicios||\n",
-    "|13|07/05|***El plano en el espacio 3D:*** Ejercicios familia||\n",
-    "|13|09/05|***Introducción a la Mecánica vectorial:*** Conceptos y principios fundamentales. Tipos de fuerzas. Unidades||\n",
+    "|01|23/07|Presentación del curso. Aplicaciones a la Ingeniería Civil| |\n",
+    "|01|25/07|***Sistemas de ecuaciones I:*** lineales y cuadráticas| |\n",
+    "|02|30/07|***Sistemas de ecuaciones II:*** lineales y cuadráticas||\n",
+    "|02|01/08|***Trigonometría I:*** Funciones trigonométricas. Ley de seno y coseno. Identidades trigonométricas. Solución de triángulos||\n",
+    "|03|06/08|***Trigonometría II:*** Problemas de aplicación ||\n",
+    "|03|08/08|***Trigonometría III:*** Problemas de aplicación||\n",
+    "|04|13/08|***Introducción a la geometría Analítica Plana:*** Sistema coordenado.\tDistancia entre dos puntos (segmento de recta).\tRazón de división de un segmento.  Angulo de inclinación y pendiente de una recta.\tPosición relativa entre rectas. Ángulo entre dos rectas. Definición de vector para aplicaciones en el plano||\n",
+    "|04|15/08||***Quiz 1 (15%)*** Sistemas de ecuaciones y Trigonometría |\n",
+    "|05|20/08|***Introducción a la geometría plana:*** Ejercicios||\n",
+    "|05|22/08|***La línea recta:*** Ecuación de la recta. Formas de la ecuación de la recta.\tDistancia punto – recta. Familia de rectas||\n",
+    "|06|27/08|***La línea recta:*** Problemas de aplicación||\n",
+    "|06|29/08|***La línea recta*** Problemas de aplicación - familia de rectas||\n",
+    "|07|03/09|***Introducción a la Geometría Vectorial 3D:*** El espacio cartesiano 3D y ubicación de puntos en el espacio: Distancia ente dos puntos 3D. Cosenos directores. Razón de división de un segmento. Definición vector. Componentes rectangulares de un vector en el espacio||\n",
+    "|07|05/09||***Quiz 2(20%)*** Introducción geometría 2D y Recta 2D|\n",
+    "|08|10/09|***Introducción a la Geometría Vectorial 3D:*** Ejercicios||\n",
+    "|08|12/09|***Geometría Vectorial:*** Operaciones entre vectores. Normalización (Vector unitario). Producto por escalar. Producto escalar o producto interior. Producto vectorial. Triple producto escalar o triple producto mixto||\n",
+    "|09|17/09|***Geometría Vectorial:*** Suma de vectores por el método gráfico (triángulo y paralelogramo).\tEjercicios||\n",
+    "|09|19/09||***Quiz 3 (10%)*** Introducción a la Geometría Vectorial 3D|\n",
+    "|10|24/09|***Geometría Vectorial:*** Suma de vectores en el espacio 2D y 3D por descomposición. Ejercicios||\n",
+    "|10|26/09|***La recta en el espacio 3D*** Vector director. Forma paramétrica y simétrica.\tPosición relativa de rectas. Intersección de rectas. Angulo entre dos rectas||\n",
+    "|11|01/10|***La recta en el espacio 3D*** Ejercicios||\n",
+    "|11|03/10||***Quiz 4 (15%)*** Geometría Vectorial 3D: Operaciones entre vectores|\n",
+    "|12|08/10|***El plano en el espacio 3D:***\tEcuación general del plano.\tPosición relativa entre planos.\tAngulo entre dos planos. Distancia punto- plano. Trazas de un plano. Posición relativa recta – plano. Familia de planos. Punto de radiación. Ecuación general de la recta. Planos proyectantes de una recta||\n",
+    "|12|10/10|***El plano en el espacio 3D:*** Ejercicios||\n",
+    "|13|15/10|***El plano en el espacio 3D:*** Ejercicios familia||\n",
+    "|13|17/10|***Introducción a la Mecánica vectorial:*** Conceptos y principios fundamentales. Tipos de fuerzas. Unidades||\n",
     "|||***Estática de partículas (2D):*** Cables. Ley de Hooke (aplicación resortes). Poleas ||\n",
-    "|14|14/05||***Quiz 5 (15%)*** Línea recta y plano en 3D|\n",
-    "|14|16/05|***Estática de partículas (2D)*** Taller ejercicios de aplicación||\n",
-    "|15|21/05|***Estática de partículas (2D)*** Aplicaciones con equilibrio en varios puntos. Máximos y mínimos||\n",
-    "|15|23/05|***Estática de partículas (3D)***||\n",
-    "|16|28/05|***Estática de partículas (3D)***||\n",
-    "|16|30/05|***Estática de partículas (3D)***||\n",
+    "|14|22/10||***Quiz 5 (15%)*** Línea recta y plano en 3D|\n",
+    "|14|24/10|***Estática de partículas (2D)*** Taller ejercicios de aplicación||\n",
+    "|15|29/10|***Estática de partículas (2D)*** Aplicaciones con equilibrio en varios puntos. Máximos y mínimos||\n",
+    "|15|31/10|***Estática de partículas (3D)***||\n",
+    "|16|05/11|***Estática de partículas (3D)***||\n",
+    "|16|07/11|***Estática de partículas (3D)***||\n",
     "||||Semana de Receso académico para preparación de finales|\n",
-    "|17|04-14/06||***Examen final (25%)***|\n"
+    "|17|12-22/11||***Examen final (25%)***|\n"
    ]
   },
   {
@@ -191,13 +190,14 @@
    "id": "684e1902",
    "metadata": {},
    "source": [
-    "|Actividad evaluativa|Semana|Porcentaje (%)|Competencia a evaluar|Carácter (Individual/Grupal)|\n",
+    "|Actividad evaluativa|Fecha|Porcentaje (%)|Competencia a evaluar|Carácter|\n",
     "|:-------------------|:----------:|:------------:|:--------------------|:--------------------------|\n",
-    "|1a Evaluación    | 4 | 15 | | Individual|\n",
-    "|2a Evaluación | 6 | 20 | | Individual|\n",
-    "|3a Evaluación | 9 | 20 | | Individual|\n",
-    "|4a Evaluación |16 | 20 | | Grupal   |\n",
-    "|Evento evaluativo final| 17-18 | 25 |Evaluación final             | Individual|"
+    "|1er Quiz | ju 15/08 | 15 | Sistemas de ecuaciones y Trigonometría   | Individual |\n",
+    "|2nd Quiz | ju 05/09 | 20 | Introducción geometría 2D y Recta 2D     | Individual |\n",
+    "|3er Quiz | ju 19/09 | 10 | Introducción a la Geometría Vectorial 3D | Parejas    |\n",
+    "|4to Quiz | ju 03/10 | 15 | Geometría Vectorial 3D: Operaciones entre vectores| Individual |\n",
+    "|5to Quiz | ma 22/10 | 15 | Línea recta y plano en 3D                | Individual|\n",
+    "|Evento evaluativo final| Semanas 17-18 | 25 |Evaluación final             | Individual|"
    ]
   },
   {
@@ -400,6 +400,14 @@
     "\n",
     "La Geometría Analítica y Vectorial es una herramienta multifacética en la Ingeniería Civil, crucial para enfrentar los desafíos de diseño, planificación y ejecución de proyectos de infraestructura de manera segura, eficiente y sostenible. Este curso proporcionará a los estudiantes las bases teóricas y prácticas necesarias para aplicar estos conceptos en una amplia gama de situaciones profesionales."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952d4e6f-dbb5-4819-bb38-92941e7e11d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -418,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 1,
