--- a/S02_EcuacionesLinealesCuadraticas.ipynb
+++ b/S02_EcuacionesLinealesCuadraticas.ipynb
@@ -735,7 +735,7 @@
     "Para resolver el sistema de ecuaciones lineales por el método de reducción, seguimos estos pasos:\n",
     "\n",
     "1. **Modificar las Ecuaciones para Igualar los Coeficientes:**\n",
-    "   - Multiplicamos la primera ecuación $x + y = 6$ por 3 para igualar los coeficientes de $y$.\n",
+    "   - Multiplicamos la primera ecuación $x + y = 6$ por 3 para igualar los coeficientes de $x$.\n",
     "   - Obtenemos la ecuación modificada: $3x + 3y = 18$.\n",
     "<p>&nbsp;</p>\n",
     "\n",
@@ -984,16 +984,30 @@
     "- Reducción\n",
     "- Igualación\n",
     "\n",
-    "a. $y = 2x + 3$, $x + y = 7$.\n",
+    "a. \n",
     "\n",
-    "b. $3x - y = 2$, $2x + 2y = 10$.\n",
+    "\\begin{eqnarray} y = 2x+3 \\\\ x + y = 7 \\end{eqnarray}\n",
     "\n",
-    "c. $y = x + 1$, $2y = 3x - 1$.\n",
+    "b. \n",
+    "\\begin{eqnarray} 3x - y = 2 \\\\ 2x + 2y = 10 \\end{eqnarray}\n",
     "\n",
-    "2. Determina si el siguiente sistema tiene solución, y en caso afirmativo, encuéntrala: $x + 2y = 4$, $2x + 4y = 8$. Sustente su respuesta.\n",
+    "c.\n",
+    "\\begin{eqnarray} y = x + 1 \\\\ 2y = 3x - 1 \\end{eqnarray}\n",
+    "\n",
+    "d.\n",
+    "\\begin{eqnarray} x + y + 2z = 3 \\\\ 3x - y + z = 1 \\\\ 2x + 3y - 4z = 8 \\end{eqnarray}\n",
+    "\n",
+    "2. Determina si el siguiente sistema tiene solución, y en caso afirmativo, encuéntrela:\n",
+    "\\begin{eqnarray} x + 2y = 4 \\\\ 2x + 4y = 8 \\end{eqnarray}\n",
+    "Sustente su respuesta.\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "3. Utiliza el método que prefieras para resolver: $4x - 5y = -1$, $-x + 3y = 12$. Justifique su elección.\n"
+    "3. Utiliza el método que consideres más adecuado para resolver el siguiente sistema de ecuaciones lineales:\n",
+    "\\begin{eqnarray} 4x - 5y = -1 \\\\ -x + 3y = 12 \\end{eqnarray}\n",
+    "\n",
+    "Justifique su elección.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1115,13 +1129,13 @@
     "4. **Optimización de Área:** Un agricultor tiene 100 metros de cerca para delimitar un corral rectangular contra un muro existente, usando el muro como uno de los lados del corral. ¿Cuáles son las dimensiones del corral que maximizan el área?\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "5. **Punto de Quiebre en Costos:** Una empresa de construcción tiene un costo fijo de $\\$10,000$ y un costo variable de $\\$500$ por unidad producida. Si el precio de venta por unidad es de $800$, ¿cuántas unidades debe producir y vender la empresa  para no tener pérdidas ni ganancias?"
+    "5. **Punto de Quiebre en Costos:** Una empresa de construcción tiene un costo fijo de $\\$10,000$ y un costo variable de $\\$500$ por unidad producida. Si el precio de venta por unidad es de $\\$800$, ¿cuántas unidades debe producir y vender la empresa  para no tener pérdidas ni ganancias?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9e411c",
+   "id": "6dab5c66-bd4d-4f40-a201-2c8243869780",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1143,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 1,
