--- a/S06_GeometriaVectorial.ipynb
+++ b/S06_GeometriaVectorial.ipynb
@@ -462,27 +462,27 @@
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Vector10.gif?raw=true\" width=\"150\" />\n",
     "</p>\n",
     "\n",
-    "$$w = uv\\sin(\\phi)$$\n",
+    "El producto vectorial de dos vectores en un plano $2D$ se puede interpretar como un pseudoescalar, que indica la magnitud del área formada por los dos vectores. Este resultado no es un vector, sino un escalar que representa la magnitud de un vector que sería perpendicular al plano si trabajáramos en $3D$.\n",
+    "\n",
+    "En el caso bidimensional, el producto vectorial se expresa como:\n",
+    "\n",
+    "$$w = u_x v_y - u_y v_x$$\n",
     "\n",
     "El producto vectorial **no posee la propiedad conmutativa**, ya que se cumple que:\n",
     "\n",
     "$$\\vec{u} \\times \\vec{v} = -\\vec{v} \\times \\vec{u}$$\n",
     "\n",
-    "Además, se cumple que el producto vectorial de dos vectores paralelos es nulo. Se obtienen entonces las siguientes relaciones ($2D$):\n",
+    "Además, el producto vectorial de dos vectores paralelos es nulo, ya que el ángulo entre ellos es $0^\\circ$ o $180^\\circ$, lo que implica que:\n",
     "\n",
-    "\\begin{aligned}\n",
-    "& \\vec{i} \\times \\vec{i}=\\vec{j} \\times \\vec{j}=\\vec{k} \\times \\vec{k}=0 \\\\\n",
-    "& \\vec{i} \\times \\vec{j}=\\vec{k} \\quad \\vec{j} \\times \\vec{k}=\\vec{i} \\quad \\vec{k} \\times i=\\vec{j}\n",
-    "\\end{aligned}\n",
+    "$$w = uv\\sin(\\phi) = 0$$\n",
     "\n",
-    "Si los vectores vienen expresados en componentes el producto vectorial se calcula desarrollando el determinante:\n",
+    "Si los vectores están expresados en componentes $x$ y $y$, el producto vectorial se calcula mediante el determinante de una matriz simplificada de $2\\times2$:\n",
     "\n",
     "$$\n",
-    "\\vec{u} \\times \\vec{v}=\\left|\\begin{array}{ccc}\n",
-    "\\vec{i} & \\vec{j} & \\vec{k} \\\\\n",
-    "u_x & u_y & u_z \\\\\n",
-    "v_x & v_y & v_z\n",
-    "\\end{array}\\right|\n",
+    "w = \\left|\\begin{array}{cc}\n",
+    "u_x & u_y \\\\\n",
+    "v_x & v_y\n",
+    "\\end{array}\\right| = u_x v_y - u_y v_x\n",
     "$$\n",
     "\n",
     "**Producto Vectorial en Tres Dimensiones**\n",
@@ -522,7 +522,7 @@
     "\n",
     "Otras propiedades del producto vectorial es:\n",
     "\n",
-    "$$|\\vec{u} \\times \\vec{v}1=|\\vec{u}|\\dot|\\vec{v}|\\sin(\\theta)$$\n",
+    "$$|\\vec{u} \\times \\vec{v}|=|\\vec{u}| \\cdot |\\vec{v}|\\sin(\\theta)$$\n",
     "\n",
     "y\n",
     "\n",
