--- a/S09_EstaticaParticulas.ipynb
+++ b/S09_EstaticaParticulas.ipynb
@@ -1114,69 +1114,56 @@
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Mecanica22_Ejemplo09.PNG?raw=true\" width=\"300\" />\n",
     "</p>\n",
     "\n",
-    "***Arreglo a):*** En este arreglo, la cuerda pasa por una polea fija en la parte superior y una polea móvil conectada a la caja. La tensión $ T $ en la cuerda es igual en ambos lados de la polea móvil.\n",
-    "\n",
-    "1. La polea móvil experimenta una fuerza hacia arriba de $ 2T $ debido a las dos secciones de la cuerda que la sostienen.\n",
-    "2. Esta fuerza debe equilibrar el peso de la caja:\n",
-    "\n",
-    "$$2T = 600 \\, \\text{lb}$$\n",
-    "\n",
-    "Resolviendo para $ T $:\n",
-    "\n",
-    "$$T = \\frac{600 \\, \\text{lb}}{2} = 300 \\, \\text{lb}$$\n",
-    "\n",
-    "***Arreglo (b):*** En este arreglo, la cuerda pasa por una polea fija y luego por una polea móvil, similar a $(a)$.\n",
-    "\n",
-    "1. La polea móvil también experimenta una fuerza hacia arriba de $ 2T $.\n",
-    "2. Esta fuerza debe equilibrar el peso de la caja:\n",
+    "**Esquema a):** Una sola polea fija que sostiene la carga.\n",
+    "- Diagrama de fuerzas: Un único segmento de cuerda soporta la carga de 600 lb, repartido en dos segementos de cuerda, cada uno ejerciendo una tensión en cada segmento de $T$.\n",
+    "- Cálculo de tensión: \n",
     "\n",
     "$$2T = 600 \\, \\text{lb}$$\n",
+    "  $$\n",
+    "  T = \\frac{600 \\, \\text{lb}}{2} = 300 \\, \\text{lb}\n",
+    "  $$\n",
+    "- **Tensión en la cuerda:** $ T = 300 \\, \\text{lb} $.\n",
     "\n",
-    "Resolviendo para $ T $:\n",
+    "**Esquema b):** Una polea móvil que sostiene la carga, con dos segmentos de cuerda distribuyendo el peso.\n",
+    "- Diagrama de fuerzas: La carga es soportada por dos segmentos de cuerda en equilibrio (igual que en el esquema anterior).\n",
+    "- Cálculo de tensión:\n",
+    "  $$\n",
+    "  T = \\frac{600 \\, \\text{lb}}{2} = 300 \\, \\text{lb}\n",
+    "  $$\n",
+    "- **Tensión en la cuerda:** $ T = 300 \\, \\text{lb} $.\n",
     "\n",
-    "$$T = \\frac{600 \\, \\text{lb}}{2} = 300 \\, \\text{lb}$$\n",
+    "**Esquema c):** Una polea fija en la parte superior y una polea móvil. Tres segmentos de cuerda soportan la carga.\n",
+    "- Diagrama de fuerzas: La carga es soportada por tres segmentos de cuerda (hacia arriba).\n",
+    "- Cálculo de tensión:\n",
+    "  $$\n",
+    "  T = \\frac{600 \\, \\text{lb}}{3} = 200 \\, \\text{lb}\n",
+    "  $$\n",
+    "- **Tensión en la cuerda:** $ T = 200 \\, \\text{lb} $.\n",
     "\n",
-    "***Arreglo (c):*** En este arreglo, la cuerda pasa por una polea fija en la parte superior y dos poleas móviles.\n",
+    "**Esquema d):** Dos poleas móviles y una polea fija en la parte superior. Tres segmentos de cuerda soportan la carga.\n",
+    "- Diagrama de fuerzas: Similar al esquema (c), tres segmentos de cuerda distribuyen el peso.\n",
+    "- Cálculo de tensión:\n",
+    "  $$\n",
+    "  T = \\frac{600 \\, \\text{lb}}{3} = 200 \\, \\text{lb}\n",
+    "  $$\n",
+    "- **Tensión en la cuerda:** $ T = 200 \\, \\text{lb} $.\n",
     "\n",
-    "1. Cada polea móvil reduce la tensión por un factor de dos.\n",
-    "2. La tensión en la cuerda debe ser tal que la suma de las fuerzas $ 2T $ y $ 2T $ equilibre el peso de la caja:\n",
+    "**Esquema e):** Dos poleas móviles y una polea fija en la parte superior. Cuatro segmentos de cuerda soportan la carga.\n",
+    "- Diagrama de fuerzas: La carga es distribuida entre cuatro segmentos de cuerda.\n",
+    "- Cálculo de tensión:\n",
+    "  $$\n",
+    "  T = \\frac{600 \\, \\text{lb}}{4} = 150 \\, \\text{lb}\n",
+    "  $$\n",
+    "- **Tensión en la cuerda:** $ T = 150 \\, \\text{lb} $.\n",
     "\n",
-    "$$4T = 600 \\, \\text{lb}$$\n",
+    "**Resumen de tensiones en cada caso:\n",
+    "- **Esquema a):** $ T = 300 \\, \\text{lb} $\n",
+    "- **Esquema b):** $ T = 300 \\, \\text{lb} $\n",
+    "- **Esquema c):** $ T = 200 \\, \\text{lb} $\n",
+    "- **Esquema d):** $ T = 200 \\, \\text{lb} $\n",
+    "- **Esquema e):** $ T = 150 \\, \\text{lb} $\n",
     "\n",
-    "Resolviendo para $ T $:\n",
-    "\n",
-    "$$T = \\frac{600 \\, \\text{lb}}{4} = 150 \\, \\text{lb}$$\n",
-    "\n",
-    "***Arreglo (d):*** En este arreglo, la cuerda pasa por dos poleas fijas y dos poleas móviles.\n",
-    "\n",
-    "1. Cada polea móvil reduce la tensión por un factor de dos.\n",
-    "2. La tensión en la cuerda debe ser tal que la suma de las fuerzas $ 2T $, $ 2T $, $ 2T $, y $ 2T $ equilibre el peso de la caja:\n",
-    "\n",
-    "$$4T = 600 \\, \\text{lb}$$\n",
-    "\n",
-    "Resolviendo para $ T $:\n",
-    "\n",
-    "$$T = \\frac{600 \\, \\text{lb}}{4} = 150 \\, \\text{lb}$$\n",
-    "\n",
-    "***Arreglo (e):*** En este arreglo, la cuerda pasa por tres poleas fijas y dos poleas móviles.\n",
-    "\n",
-    "1. Cada polea móvil reduce la tensión por un factor de dos.\n",
-    "2. La tensión en la cuerda debe ser tal que la suma de las fuerzas $ 3T $ y $ 3T $ equilibre el peso de la caja:\n",
-    "\n",
-    "$$6T = 600 \\, \\text{lb}$$\n",
-    "\n",
-    "Resolviendo para $ T $:\n",
-    "\n",
-    "$$T = \\frac{600 \\, \\text{lb}}{6} = 100 \\, \\text{lb}$$\n",
-    "\n",
-    "***Resultados***\n",
-    "- **Arreglo (a):** $ T = 300 \\, \\text{lb} $\n",
-    "- **Arreglo (b):** $ T = 300 \\, \\text{lb} $\n",
-    "- **Arreglo (c):** $ T = 150 \\, \\text{lb} $\n",
-    "- **Arreglo (d):** $ T = 150 \\, \\text{lb} $\n",
-    "- **Arreglo (e):** $ T = 100 \\, \\text{lb} $\n",
-    "\n",
-    "Estos valores de tensión permiten que la caja de $600 \\text{ lb}$ se mantenga en equilibrio en cada uno de los arreglos de poleas."
+    "Cada caso muestra cómo la distribución de segmentos en el sistema de poleas afecta la tensión requerida para soportar la carga de 600 lb."
    ]
   },
   {
@@ -1654,6 +1641,22 @@
     "\\end{gathered}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23c2ed25",
+   "metadata": {},
+   "source": [
+    "## Cerchas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2b78859",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
