--- a/S01_Presentacion_Readme1st.ipynb
+++ b/S01_Presentacion_Readme1st.ipynb
@@ -7,7 +7,6 @@
    "source": [
     "<h1 align=\"center\">Geometría Analítica y Vectorial</h1>\n",
     "<h1 align=\"center\">Presentación del curso</h1>\n",
-    "<h1 align=\"center\">2024</h1>\n",
     "<h1 align=\"center\">MEDELLÍN - COLOMBIA </h1>"
    ]
   },
@@ -140,41 +139,41 @@
    "source": [
     "|**Semana** | **Fecha**         |**Contenido** |**Observación**|\n",
     "|:-----:|:-------------:|:-----------|:----------------------|\n",
-    "|01|23/07|Presentación del curso. Aplicaciones a la Ingeniería Civil| |\n",
-    "|01|25/07|***Sistemas de ecuaciones I:*** lineales y cuadráticas| |\n",
-    "|02|30/07|***Sistemas de ecuaciones II:*** lineales y cuadráticas||\n",
-    "|02|01/08|***Trigonometría I:*** Funciones trigonométricas. Ley de seno y coseno. Identidades trigonométricas. Solución de triángulos||\n",
-    "|03|06/08|***Trigonometría II:*** Problemas de aplicación ||\n",
-    "|03|08/08|***Trigonometría III:*** Problemas de aplicación||\n",
-    "|04|13/08|***Introducción a la geometría Analítica Plana:*** Sistema coordenado.\tDistancia entre dos puntos (segmento de recta).\tRazón de división de un segmento.  Angulo de inclinación y pendiente de una recta.\tPosición relativa entre rectas. Ángulo entre dos rectas. Definición de vector para aplicaciones en el plano||\n",
-    "|04|15/08||***Quiz 1 (15%)*** Sistemas de ecuaciones y Trigonometría |\n",
-    "|05|20/08|***Introducción a la geometría plana:*** Ejercicios||\n",
-    "|05|22/08|***La línea recta:*** Ecuación de la recta. Formas de la ecuación de la recta.\tDistancia punto – recta. Familia de rectas||\n",
-    "|06|27/08|***La línea recta:*** Problemas de aplicación||\n",
-    "|06|29/08|***La línea recta*** Problemas de aplicación - familia de rectas||\n",
-    "|07|03/09|***Introducción a la Geometría Vectorial 3D:*** El espacio cartesiano 3D y ubicación de puntos en el espacio: Distancia ente dos puntos 3D. Cosenos directores. Razón de división de un segmento. Definición vector. Componentes rectangulares de un vector en el espacio||\n",
-    "|07|05/09||***Quiz 2(20%)*** Introducción geometría 2D y Recta 2D|\n",
-    "|08|10/09|***Introducción a la Geometría Vectorial 3D:*** Ejercicios||\n",
-    "|08|12/09|***Geometría Vectorial:*** Operaciones entre vectores. Normalización (Vector unitario). Producto por escalar. Producto escalar o producto interior. Producto vectorial. Triple producto escalar o triple producto mixto||\n",
-    "|09|17/09|***Geometría Vectorial:*** Suma de vectores por el método gráfico (triángulo y paralelogramo).\tEjercicios||\n",
-    "|09|19/09||***Quiz 3 (10%)*** Introducción a la Geometría Vectorial 3D|\n",
-    "|10|24/09|***Geometría Vectorial:*** Suma de vectores en el espacio 2D y 3D por descomposición. Ejercicios||\n",
-    "|10|26/09|***La recta en el espacio 3D*** Vector director. Forma paramétrica y simétrica.\tPosición relativa de rectas. Intersección de rectas. Angulo entre dos rectas||\n",
-    "|11|01/10|***La recta en el espacio 3D*** Ejercicios||\n",
-    "|11|03/10||***Quiz 4 (15%)*** Geometría Vectorial 3D: Operaciones entre vectores|\n",
-    "|12|08/10|***El plano en el espacio 3D:***\tEcuación general del plano.\tPosición relativa entre planos.\tAngulo entre dos planos. Distancia punto- plano. Trazas de un plano. Posición relativa recta – plano. Familia de planos. Punto de radiación. Ecuación general de la recta. Planos proyectantes de una recta||\n",
-    "|12|10/10|***El plano en el espacio 3D:*** Ejercicios||\n",
-    "|13|15/10|***El plano en el espacio 3D:*** Ejercicios familia||\n",
-    "|13|17/10|***Introducción a la Mecánica vectorial:*** Conceptos y principios fundamentales. Tipos de fuerzas. Unidades||\n",
+    "|01|04/02|Presentación del curso. Aplicaciones a la Ingeniería Civil| |\n",
+    "|01|06/02|***Sistemas de ecuaciones I:*** lineales y cuadráticas| |\n",
+    "|02|11/02|***Sistemas de ecuaciones II:*** lineales y cuadráticas||\n",
+    "|02|13/02|***Trigonometría I:*** Funciones trigonométricas. Ley de seno y coseno. Identidades trigonométricas. Solución de triángulos||\n",
+    "|03|18/02|***Trigonometría II:*** Problemas de aplicación ||\n",
+    "|03|20/02|***Trigonometría III:*** Problemas de aplicación||\n",
+    "|04|25/02|***Introducción a la geometría Analítica Plana:*** Sistema coordenado.\tDistancia entre dos puntos (segmento de recta).\tRazón de división de un segmento.  Angulo de inclinación y pendiente de una recta.\tPosición relativa entre rectas. Ángulo entre dos rectas. Definición de vector para aplicaciones en el plano||\n",
+    "|04|27/02||***Quiz 1 (15%)*** Sistemas de ecuaciones y Trigonometría |\n",
+    "|05|04/03|***Introducción a la geometría plana:*** Ejercicios||\n",
+    "|05|06/03|***La línea recta:*** Ecuación de la recta. Formas de la ecuación de la recta.\tDistancia punto – recta. Familia de rectas||\n",
+    "|06|11/03|***La línea recta:*** Problemas de aplicación||\n",
+    "|06|13/03|***La línea recta*** Problemas de aplicación - familia de rectas||\n",
+    "|07|18/03|***Introducción a la Geometría Vectorial 3D:*** El espacio cartesiano 3D y ubicación de puntos en el espacio: Distancia ente dos puntos 3D. Cosenos directores. Razón de división de un segmento. Definición vector. Componentes rectangulares de un vector en el espacio||\n",
+    "|07|20/3||***Quiz 2(20%)*** Introducción geometría 2D y Recta 2D|\n",
+    "|08|25/03|***Introducción a la Geometría Vectorial 3D:*** Ejercicios||\n",
+    "|08|27/03|***Geometría Vectorial:*** Operaciones entre vectores. Normalización (Vector unitario). Producto por escalar. Producto escalar o producto interior. Producto vectorial. Triple producto escalar o triple producto mixto||\n",
+    "|09|01/04|***Geometría Vectorial:*** Suma de vectores por el método gráfico (triángulo y paralelogramo).\tEjercicios||\n",
+    "|09|03/04||***Quiz 3 (10%)*** Introducción a la Geometría Vectorial 3D|\n",
+    "|10|08/04|***Geometría Vectorial:*** Suma de vectores en el espacio 2D y 3D por descomposición. Ejercicios||\n",
+    "|10|10/04|***La recta en el espacio 3D*** Vector director. Forma paramétrica y simétrica.\tPosición relativa de rectas. Intersección de rectas. Angulo entre dos rectas||\n",
+    "|11|22/04|***La recta en el espacio 3D*** Ejercicios||\n",
+    "|11|24/04||***Quiz 4 (15%)*** Geometría Vectorial 3D: Operaciones entre vectores|\n",
+    "|12|29/04|***El plano en el espacio 3D:***\tEcuación general del plano.\tPosición relativa entre planos.\tAngulo entre dos planos. Distancia punto- plano. Trazas de un plano. Posición relativa recta – plano. Familia de planos. Punto de radiación. Ecuación general de la recta. Planos proyectantes de una recta||\n",
+    "|12|01/05||Festivo|\n",
+    "|13|06/05|***El plano en el espacio 3D:*** Ejercicios familia||\n",
+    "|13|08/05|***Introducción a la Mecánica vectorial:*** Conceptos y principios fundamentales. Tipos de fuerzas. Unidades||\n",
     "|||***Estática de partículas (2D):*** Cables. Ley de Hooke (aplicación resortes). Poleas ||\n",
-    "|14|22/10||***Quiz 5 (15%)*** Línea recta y plano en 3D|\n",
-    "|14|24/10|***Estática de partículas (2D)*** Taller ejercicios de aplicación||\n",
-    "|15|29/10|***Estática de partículas (2D)*** Aplicaciones con equilibrio en varios puntos. Máximos y mínimos||\n",
-    "|15|31/10|***Estática de partículas (3D)***||\n",
-    "|16|05/11|***Estática de partículas (3D)***||\n",
-    "|16|07/11|***Estática de partículas (3D)***||\n",
+    "|14|13/05||***Quiz 5 (15%)*** Línea recta y plano en 3D|\n",
+    "|14|15/05|***Estática de partículas (2D)*** Taller ejercicios de aplicación||\n",
+    "|15|20/05|***Estática de partículas (2D)*** Aplicaciones con equilibrio en varios puntos. Máximos y mínimos||\n",
+    "|15|22/05|***Estática de partículas (3D)***||\n",
+    "|16|27/05|***Estática de partículas (3D)***||\n",
+    "|16|29/05|***Estática de partículas (3D)***||\n",
     "||||Semana de Receso académico para preparación de finales|\n",
-    "|17|12-22/11||***Examen final (25%)***|\n"
+    "|17|||***Examen final (25%)***|\n"
    ]
   },
   {
@@ -192,11 +191,11 @@
    "source": [
     "|Actividad evaluativa|Fecha|Porcentaje (%)|Competencia a evaluar|Carácter|\n",
     "|:-------------------|:----------:|:------------:|:--------------------|:--------------------------|\n",
-    "|1er Quiz | ju 15/08 | 15 | Sistemas de ecuaciones y Trigonometría   | Individual |\n",
-    "|2nd Quiz | ju 05/09 | 20 | Introducción geometría 2D y Recta 2D     | Individual |\n",
-    "|3er Quiz | ju 19/09 | 10 | Introducción a la Geometría Vectorial 3D | Parejas    |\n",
-    "|4to Quiz | ju 03/10 | 15 | Geometría Vectorial 3D: Operaciones entre vectores| Individual |\n",
-    "|5to Quiz | ma 22/10 | 15 | Línea recta y plano en 3D                | Individual|\n",
+    "|1er Quiz | ju 27/02 | 15 | Sistemas de ecuaciones y Trigonometría   | Individual |\n",
+    "|2nd Quiz | ju 20/03 | 20 | Introducción geometría 2D y Recta 2D     | Individual |\n",
+    "|3er Quiz | ju 03/04 | 10 | Introducción a la Geometría Vectorial 3D | Parejas    |\n",
+    "|4to Quiz | ju 24/04 | 15 | Geometría Vectorial 3D: Operaciones entre vectores| Individual |\n",
+    "|5to Quiz | ma 13/05 | 15 | Línea recta y plano en 3D                | Individual|\n",
     "|Evento evaluativo final| Semanas 17-18 | 25 |Evaluación final             | Individual|"
    ]
   },
@@ -230,11 +229,7 @@
     "- Jay Abramson, Precalculus\n",
     "- Young H. Kim, A Basic Approach to Precalculus Trigonometry\n",
     "- G. Viglino; M. Berger, Precalculus with early trigonometry 3rd edition\n",
-    "- Swokowski Cole, Algebra and Trigonometry with Analytic Geometry, Class Edition, 12th Edition\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "- Swokowski Cole, Algebra and Trigonometry with Analytic Geometry, Class Edition, 12th Edition"
    ]
   },
   {
