--- a/S02_EcuacionesLinealesCuadraticas.ipynb
+++ b/S02_EcuacionesLinealesCuadraticas.ipynb
@@ -984,30 +984,23 @@
     "- Reducción\n",
     "- Igualación\n",
     "\n",
-    "a. \n",
+    "a. $$y = 2x+3 \\\\ x + y = 7$$\n",
     "\n",
-    "\\begin{eqnarray} y = 2x+3 \\\\ x + y = 7 \\end{eqnarray}\n",
+    "b. $$3x - y = 2 \\\\ 2x + 2y = 10$$\n",
     "\n",
-    "b. \n",
-    "\\begin{eqnarray} 3x - y = 2 \\\\ 2x + 2y = 10 \\end{eqnarray}\n",
+    "c. $$y = x + 1 \\\\ 2y = 3x - 1$$\n",
     "\n",
-    "c.\n",
-    "\\begin{eqnarray} y = x + 1 \\\\ 2y = 3x - 1 \\end{eqnarray}\n",
-    "\n",
-    "d.\n",
-    "\\begin{eqnarray} x + y + 2z = 3 \\\\ 3x - y + z = 1 \\\\ 2x + 3y - 4z = 8 \\end{eqnarray}\n",
+    "d. $$x + y + 2z = 3 \\\\ 3x - y + z = 1 \\\\ 2x + 3y - 4z = 8$$\n",
     "\n",
     "2. Determina si el siguiente sistema tiene solución, y en caso afirmativo, encuéntrela:\n",
-    "\\begin{eqnarray} x + 2y = 4 \\\\ 2x + 4y = 8 \\end{eqnarray}\n",
+    "$$x + 2y = 4 \\\\ 2x + 4y = 8$$\n",
     "Sustente su respuesta.\n",
     "<p>&nbsp;</p>\n",
     "\n",
     "3. Utiliza el método que consideres más adecuado para resolver el siguiente sistema de ecuaciones lineales:\n",
-    "\\begin{eqnarray} 4x - 5y = -1 \\\\ -x + 3y = 12 \\end{eqnarray}\n",
+    "$$4x - 5y = -1 \\\\ -x + 3y = 12 $$\n",
     "\n",
-    "Justifique su elección.\n",
-    "\n",
-    "\n"
+    "Justifique su elección."
    ]
   },
   {
@@ -1101,7 +1094,33 @@
     "4. **Análisis de Costos:** Una empresa tiene dos tipos de gastos: fijos y variables. Si los gastos totales son de $\\$10,000$ y los gastos fijos son el doble de los gastos variables, ¿cuánto es cada tipo de gasto?\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "5. **Cálculo de Dimensiones:** Un rectángulo tiene un perímetro de $50$ metros y su longitud es el triple de su ancho. ¿Cuáles son las dimensiones del rectángulo?\n"
+    "5. **Cálculo de Dimensiones:** Un rectángulo tiene un perímetro de $50$ metros y su longitud es el triple de su ancho. ¿Cuáles son las dimensiones del rectángulo?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "6. **Problema con monedas:** Javier tiene $\\$21$ en monedas de 20 y 50 centavos. ¿Cuántas monedas de cada tipo hay si el número total de ellas es 69?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "7. **Problema de los tacos:** En la taquería el “El Fogón” Ernesto se comió 3 tacos de bistec y 2 de pastor, por los cuales pagó $\\$46$, mientras que su novia Silvia se comió 2 tacos de bistec y 3 de pastor por los que pagó $\\$39$. ¿Cuál es el precio de un taco de bistec y uno de pastor?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "8. **Problema de los disfraces:** Todos los alumnos de este curso se preparan para ir a una fiesta de disfraces. El disfraz para cada hombre cuesta $\\$60$ pesos y el disfraz para cada mujer cuesta $\\$90$ pesos. Si en el grupo hay 45 alumnos entre hombres y mujeres, y pagan $\\$3,300$ pesos por todos los disfraces ¿cuántos hombres y cuántas mujeres van a la fiesta?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "9. **Problemas de perros y gallinas:** A Juan le gustan mucho los animales y tiene en su propiedad perros y gallinas. Un día le dijo a su esposa: ¿qué te parece?, conté todas las cabezas de los animales y ya tenemos 60, también conté sus patas y obtuve 188. ¿Cuántos perros y cuántas gallinas tiene?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "10. **Problema de la papelería:** Tres clientes acudieron a la papelería:\n",
+    "\n",
+    "  - El primero gastó $\\$207.00$ por 3 plumas, 4 lapiceros y 5 marcadores.\n",
+    "  - El segundo cliente pagó $\\$103$.00$ por una pluma, 3 lapiceros y 2 marcadores.\n",
+    "  - El tercer cliente gastó $\\$216.00$ por 6 plumas, un lapicero y 4 marcadores.\n",
+    "¿Cuál es el costo de una pluma, un lapicero y un marcador en la papelería?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "11. **Problema de química:** Se necesitan 20 litros de una solución ácida al 20%. Para ello tienes recipientes de solución al 10% y solución al 25%. ¿Cuántos litros de cada uno debes combinar para obtener la solución necesaria?\n",
+    "<p>&nbsp;</p>\n",
+    "\n",
+    "12. **Tarifas Celulares:** Dos empresas telefónicas ofrecen a usuarios los planes tarifarios para celular siguientes: La empresa “Tecel” cobra una renta mensual fija de $\\$150$ pesos más 2 por minuto de llamadas en el mes, mientras que la empresa “Movicel” cobra una renta mensual fija de $\\$200$ más 1.60 por minuto de llamadas en el mes ¿para cuántos minutos de llamadas conviene más una empresa que la otra, es decir, con cuál se paga menos?\n"
    ]
   },
   {
