--- a/S02_EcuacionesLinealesCuadraticas.ipynb
+++ b/S02_EcuacionesLinealesCuadraticas.ipynb
@@ -1152,11 +1152,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dab5c66-bd4d-4f40-a201-2c8243869780",
+   "cell_type": "markdown",
+   "id": "fb6a7299",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Más problemas de Sistemas de Ecuaciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c013649",
+   "metadata": {},
+   "source": [
+    "- **Problema 1:** Con una barrica de 110 litros de vinagre se quiere llenar 168 botellas, unas de 1/2 litro y otras de 3/4 litro. ¿Cuántas botellas de cada capacidad se utilizarán?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff96f31e",
+   "metadata": {},
+   "source": [
+    "- **Problema 2:** En la construcción de los cajones de un librero de madera, un carpintero necesita cortar una tabla de 20 centímetros de largo en dos partes que tengan como diferencia entre ellas 6 centímetros. Determina la longitud de las partes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7b214ab",
+   "metadata": {},
+   "source": [
+    "- **Problema 3:** Una compañía vitivinícola requiere producir 100 litros de jerez con vino blanco que contiene el 10% de alcohol y brandy que contiene el 35% de alcohol. El jerez debe contener el 15% de alcohol. Determina los litros que deben mezclarse de vino blanco y brandy para obtener el resultado deseado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6380850b",
+   "metadata": {},
+   "source": [
+    "- **Problema 4:** Una lancha realiza viajes a los bañistas por una playa a máxima velocidad cubriendo una distancia de 4 kilómetros en 15 minutos con la corriente en contra, mientras que el viaje de regreso también lo realiza a máxima velocidad con la corriente a favor en 12 minutos. Determina la velocidad de la lancha y la de la corriente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fef1899",
+   "metadata": {},
+   "source": [
+    "- **Problema 5:** Un agricultor puede usar dos tipos de fertilizantes en un plantío de naranjos, el tipo A y el tipo B. Cada saco del tipo A contiene 18 libras de nitrógeno y 5 de ácido fosfórico, para el tipo B cada saco contiene 4 libras de nitrógeno y 8 de ácido fosfórico. Las pruebas indican que el naranjo necesita 720 libras de nitrógeno y 510 libras de ácido fosfórico. ¿Cuántos sacos de cada tipo tiene que usar para obtener las cantidades necesarias de nitrógeno y ácido fosfórico?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f13f05a",
+   "metadata": {},
    "source": []
   }
  ],
